--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba de Calculadora</title>
+    <title>Calculadora</title>
+
 </head>
 <body>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi dicta, doloremque velit nostrum ad recusandae ipsa quibusdam accusamus vero blanditiis, quia odio? Molestias quidem qui dolorem reiciendis magni, ab nobis.</p>
